
ChangeLog
 [ + added, - removed, * changed ]
 * 27Mar2014 Reverted prototype of API call Extrae_define_event_type to receive parameters by reference to be compatible with Fortran
 * 19Mar2014 Sanitize examples' Makefiles (MPI basically) 
             Fix unmatched persistent requests with parallel merge.
 * 13Mar2014 Ensure DYNINSTAPI_RT_LIB is correctly set in extrae.sh/csh
 * 27Feb2014 Added option to run the on-line analysis at the end of the execution instead of periodically.
             Fixed bug in the Makefiles that caused that the online_env.sh script was not reinstalled after a reconfigure.
             Added routine to dump the states stack in the merger when the MAX_STATES limit is reached.
             The extrae.sh sources the necessary environment for the online analysis (no support for csh yet).
             Online examples updated.
             Updated version to 3.0rc6.
 + 17Feb2014 Splitted --enable-openmp for the several supported runtimes
             Extrae_suspend/resume_virtual thread no longer captures HWCs
 * 07Feb2014 Fixed missing include 'stats/MPI/mpi_utils.h' in the distribution 
 + 05Feb2014 Added API call Extrae_flush to force flushing of the calling thread
 * 31Jan2014 Fixed bug that stalled the on-line analysis (on-line root running in double-background was killed by garbage collector)
             Removed unnecessary recursive mutexes.
             Refactored the way the spectral worker emits online events
             Fixed bug in the call to Extrae_define_event_type
             Updated version to 3.0rc5
 * 23Jan2014 Nanos examples for BG/Q
 * 20Jan2014 Added initialization of mutex in the on-line root that went missing in the previous update
             Updated version to 3.0rc4
 + 13Jan2014 Added advanced functionalities in the on-line mode (automatic threshold, conversion from detail to burst, phase profiling)
             Added new MPI statistics
             Changed the management of the HWC_CHANGE_EV